# festserve

./: Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: Dockerfile  alembic.ini  drop_alembic_version.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  1fa772acc3ca_init.py  2e446586fcf8_make_scanner_assigned_stall_id_nullable.py  d28ca03a8465_add_password_hash_to_advertisers.py  e798d9141c76_init.py
backend/src/festserve_api/: auth.py  create_users.py  database.py  health.py  main.py  models.py  schemas.py  tasks.py
backend/src/festserve_api/routes/: campaigns.py  products.py  scan_events.py  stalls.py
backend/static/: index.html
backend/static/assets/: index-722d502e.js
backend/tests/: test_auth.py  test_campaigns.py
frontend/: Dockerfile  eslint.config.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.js
frontend/src/: App.jsx
frontend/src/pages/: CampaignList.jsx  Login.jsx
